; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/optimizer/path/extr_clausesel.c_clauselist_selectivity.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/optimizer/path/extr_clausesel.c_clauselist_selectivity.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i64 }

@RTE_RELATION = common dso_local global i64 0, align 8
@NIL = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local double @clauselist_selectivity(i32* %0, i32* %1, i32 %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca double, align 8
  %12 = alloca %struct.TYPE_4__*, align 8
  %13 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32* %4, i32** %10, align 8
  store double 1.000000e+00, double* %11, align 8
  store i32* null, i32** %13, align 8
  %14 = load i32*, i32** %6, align 8
  %15 = load i32*, i32** %7, align 8
  %16 = call %struct.TYPE_4__* @find_single_rel_for_clauses(i32* %14, i32* %15)
  store %struct.TYPE_4__* %16, %struct.TYPE_4__** %12, align 8
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %12, align 8
  %18 = icmp ne %struct.TYPE_4__* %17, null
  br i1 %18, label %19, label %41

19:                                               ; preds = %5
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %12, align 8
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = load i64, i64* @RTE_RELATION, align 8
  %24 = icmp eq i64 %22, %23
  br i1 %24, label %25, label %41

25:                                               ; preds = %19
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %12, align 8
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i32 0, i32 1
  %28 = load i64, i64* %27, align 8
  %29 = load i64, i64* @NIL, align 8
  %30 = icmp ne i64 %28, %29
  br i1 %30, label %31, label %41

31:                                               ; preds = %25
  %32 = load i32*, i32** %6, align 8
  %33 = load i32*, i32** %7, align 8
  %34 = load i32, i32* %8, align 4
  %35 = load i32, i32* %9, align 4
  %36 = load i32*, i32** %10, align 8
  %37 = load %struct.TYPE_4__*, %struct.TYPE_4__** %12, align 8
  %38 = call double @statext_clauselist_selectivity(i32* %32, i32* %33, i32 %34, i32 %35, i32* %36, %struct.TYPE_4__* %37, i32** %13)
  %39 = load double, double* %11, align 8
  %40 = fmul double %39, %38
  store double %40, double* %11, align 8
  br label %41

41:                                               ; preds = %31, %25, %19, %5
  %42 = load double, double* %11, align 8
  %43 = load i32*, i32** %6, align 8
  %44 = load i32*, i32** %7, align 8
  %45 = load i32, i32* %8, align 4
  %46 = load i32, i32* %9, align 4
  %47 = load i32*, i32** %10, align 8
  %48 = load i32*, i32** %13, align 8
  %49 = call double @clauselist_selectivity_simple(i32* %43, i32* %44, i32 %45, i32 %46, i32* %47, i32* %48)
  %50 = fmul double %42, %49
  ret double %50
}

declare dso_local %struct.TYPE_4__* @find_single_rel_for_clauses(i32*, i32*) #1

declare dso_local double @statext_clauselist_selectivity(i32*, i32*, i32, i32, i32*, %struct.TYPE_4__*, i32**) #1

declare dso_local double @clauselist_selectivity_simple(i32*, i32*, i32, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
